# name: test_command_delete[False-False-False-False]
  '''
  This action will delete following hikes:
  
  [3m                              Hikes                               [0m
                                                                    
   [1m [0m[1mID[0m[1m [0m [1m [0m[1mDate      [0m[1m [0m [1m [0m[1mName    [0m[1m [0m [1m [0m[1m➡ km[0m[1m [0m [1m [0m[1m ⬈ m[0m[1m [0m [1m [0m[1m ⬊ m[0m[1m [0m [1m [0m[1m    ⏱[0m[1m [0m [1m [0m[1mkm/h[0m[1m [0m 
   ──────────────────────────────────────────────────────────────── 
     1   1984-09-22   Foo Hike   10.5   2040   2028   02:14   4.70  
     2   1984-09-23   Bar Hike   15.4    240    228   03:48   4.05  
                                                                    
  Aborting
  
  '''
# ---
# name: test_command_delete[False-False-False-True]
  '''
  This action will delete following hikes:
  
  [3m                              Hikes                               [0m
                                                                    
   [1m [0m[1mID[0m[1m [0m [1m [0m[1mDate      [0m[1m [0m [1m [0m[1mName    [0m[1m [0m [1m [0m[1m➡ km[0m[1m [0m [1m [0m[1m ⬈ m[0m[1m [0m [1m [0m[1m ⬊ m[0m[1m [0m [1m [0m[1m    ⏱[0m[1m [0m [1m [0m[1mkm/h[0m[1m [0m 
   ──────────────────────────────────────────────────────────────── 
     1   1984-09-22   Foo Hike   10.5   2040   2028   02:14   4.70  
     2   1984-09-23   Bar Hike   15.4    240    228   03:48   4.05  
     3   1984-09-24   Baz Hike   34.0    867    947   08:17   4.10  
                                                                    
  Aborting
  
  '''
# ---
# name: test_command_delete[False-False-True-False]
  '''
  This action will delete following hikes:
  
  [3m                              Hikes                               [0m
                                                                    
   [1m [0m[1mID[0m[1m [0m [1m [0m[1mDate      [0m[1m [0m [1m [0m[1mName    [0m[1m [0m [1m [0m[1m➡ km[0m[1m [0m [1m [0m[1m ⬈ m[0m[1m [0m [1m [0m[1m ⬊ m[0m[1m [0m [1m [0m[1m    ⏱[0m[1m [0m [1m [0m[1mkm/h[0m[1m [0m 
   ──────────────────────────────────────────────────────────────── 
     1   1984-09-22   Foo Hike   10.5   2040   2028   02:14   4.70  
     2   1984-09-23   Bar Hike   15.4    240    228   03:48   4.05  
                                                                    
  
  '''
# ---
# name: test_command_delete[False-False-True-True]
  '''
  This action will delete following hikes:
  
  [3m                              Hikes                               [0m
                                                                    
   [1m [0m[1mID[0m[1m [0m [1m [0m[1mDate      [0m[1m [0m [1m [0m[1mName    [0m[1m [0m [1m [0m[1m➡ km[0m[1m [0m [1m [0m[1m ⬈ m[0m[1m [0m [1m [0m[1m ⬊ m[0m[1m [0m [1m [0m[1m    ⏱[0m[1m [0m [1m [0m[1mkm/h[0m[1m [0m 
   ──────────────────────────────────────────────────────────────── 
     1   1984-09-22   Foo Hike   10.5   2040   2028   02:14   4.70  
     2   1984-09-23   Bar Hike   15.4    240    228   03:48   4.05  
     3   1984-09-24   Baz Hike   34.0    867    947   08:17   4.10  
                                                                    
  
  '''
# ---
# name: test_command_delete[True-False-False-False]
  '''
  This action will delete following hikes:
  
  [3m                              Hikes                               [0m
                                                                    
   [1m [0m[1mID[0m[1m [0m [1m [0m[1mDate      [0m[1m [0m [1m [0m[1mName    [0m[1m [0m [1m [0m[1m➡ km[0m[1m [0m [1m [0m[1m ⬈ m[0m[1m [0m [1m [0m[1m ⬊ m[0m[1m [0m [1m [0m[1m    ⏱[0m[1m [0m [1m [0m[1mkm/h[0m[1m [0m 
   ──────────────────────────────────────────────────────────────── 
     1   1984-09-22   Foo Hike   10.5   2040   2028   02:14   4.70  
     2   1984-09-23   Bar Hike   15.4    240    228   03:48   4.05  
                                                                    
  
  '''
# ---
# name: test_command_delete[True-False-False-True]
  '''
  This action will delete following hikes:
  
  [3m                              Hikes                               [0m
                                                                    
   [1m [0m[1mID[0m[1m [0m [1m [0m[1mDate      [0m[1m [0m [1m [0m[1mName    [0m[1m [0m [1m [0m[1m➡ km[0m[1m [0m [1m [0m[1m ⬈ m[0m[1m [0m [1m [0m[1m ⬊ m[0m[1m [0m [1m [0m[1m    ⏱[0m[1m [0m [1m [0m[1mkm/h[0m[1m [0m 
   ──────────────────────────────────────────────────────────────── 
     1   1984-09-22   Foo Hike   10.5   2040   2028   02:14   4.70  
     2   1984-09-23   Bar Hike   15.4    240    228   03:48   4.05  
     3   1984-09-24   Baz Hike   34.0    867    947   08:17   4.10  
                                                                    
  
  '''
# ---
# name: test_command_delete[True-False-True-False]
  '''
  This action will delete following hikes:
  
  [3m                              Hikes                               [0m
                                                                    
   [1m [0m[1mID[0m[1m [0m [1m [0m[1mDate      [0m[1m [0m [1m [0m[1mName    [0m[1m [0m [1m [0m[1m➡ km[0m[1m [0m [1m [0m[1m ⬈ m[0m[1m [0m [1m [0m[1m ⬊ m[0m[1m [0m [1m [0m[1m    ⏱[0m[1m [0m [1m [0m[1mkm/h[0m[1m [0m 
   ──────────────────────────────────────────────────────────────── 
     1   1984-09-22   Foo Hike   10.5   2040   2028   02:14   4.70  
     2   1984-09-23   Bar Hike   15.4    240    228   03:48   4.05  
                                                                    
  
  '''
# ---
# name: test_command_delete[True-False-True-True]
  '''
  This action will delete following hikes:
  
  [3m                              Hikes                               [0m
                                                                    
   [1m [0m[1mID[0m[1m [0m [1m [0m[1mDate      [0m[1m [0m [1m [0m[1mName    [0m[1m [0m [1m [0m[1m➡ km[0m[1m [0m [1m [0m[1m ⬈ m[0m[1m [0m [1m [0m[1m ⬊ m[0m[1m [0m [1m [0m[1m    ⏱[0m[1m [0m [1m [0m[1mkm/h[0m[1m [0m 
   ──────────────────────────────────────────────────────────────── 
     1   1984-09-22   Foo Hike   10.5   2040   2028   02:14   4.70  
     2   1984-09-23   Bar Hike   15.4    240    228   03:48   4.05  
     3   1984-09-24   Baz Hike   34.0    867    947   08:17   4.10  
                                                                    
  
  '''
# ---
# name: test_command_export_with_ids
  list([
    dict({
      'body': '# Foo Hike',
      'date': '1984-09-22',
      'distance': 10.5,
      'duration': 134,
      'elevation_gain': 2040,
      'elevation_loss': 2028,
      'gpx_file': None,
      'id': 1,
      'name': 'Foo Hike',
    }),
    dict({
      'body': '# Bar Hike',
      'date': '1984-09-23',
      'distance': 15.4,
      'duration': 228,
      'elevation_gain': 240,
      'elevation_loss': 228,
      'gpx_file': None,
      'id': 2,
      'name': 'Bar Hike',
    }),
    dict({
      'body': '# Baz Hike',
      'date': '1984-09-24',
      'distance': 34.0,
      'duration': 497,
      'elevation_gain': 867,
      'elevation_loss': 947,
      'gpx_file': None,
      'id': 3,
      'name': 'Baz Hike',
    }),
  ])
# ---
# name: test_command_import
  list([
    '1',
    '1970-01-01',
    'endorsement hike',
    '5.0',
    '298',
    '298',
    '01:15',
    '4.00',
  ])
# ---
# name: test_command_import.1
  list([
    '2',
    '1970-01-02',
    'abnegation hike',
    '5.0',
    '298',
    '298',
    '01:15',
    '4.00',
  ])
# ---
# name: test_command_import.2
  list([
    '3',
    '1970-01-03',
    'depositor hike',
    '7.4',
    '1029',
    '54',
    '02:45',
    '2.69',
  ])
# ---
# name: test_command_import.3
  list([
    '4',
    '1970-01-04',
    "adrenaline's hike",
    '6.6',
    '420',
    '420',
    '02:00',
    '3.30',
  ])
# ---
# name: test_command_import.4
  list([
    '5',
    '1970-01-05',
    "shooter's hike",
    '5.0',
    '288',
    '288',
    '01:50',
    '2.73',
  ])
# ---
# name: test_command_import_update
  list([
    '1',
    '2022-02-26',
    'abnegation hike',
    '5.0',
    '298',
    '298',
    '01:15',
    '4.00',
  ])
# ---
# name: test_command_show_detail[False-False-False]
  '''
  [3m              Foo Bar Hike              [0m
   ────────────────────────────────────── 
    ID            1                       
    Date          1984-09-23              
    ➡ km          20.7                    
    ⬈ m           2040                    
    ⬊ m           2028                    
    ⏱             07:14                   
    km/h          2.86                    
   ────────────────────────────────────── 
  
  ╔══════════════════════════════════════════════════════════════════════════════╗
  ║                                 [1mFoo Bar Hike[0m                                 ║
  ╚══════════════════════════════════════════════════════════════════════════════╝
  
  My awesome journey...                                                           
  
  No *.gpx-file available
  
  
  '''
# ---
# name: test_command_show_detail[True-False-False]
  '''
  [3m              Foo Bar Hike              [0m
   ────────────────────────────────────── 
    ID            1                       
    Date          1984-09-23              
    ➡ km          20.7                    
    ⬈ m           2040                    
    ⬊ m           2028                    
    ⏱             07:14                   
    km/h          2.86                    
   ────────────────────────────────────── 
  
  ╔══════════════════════════════════════════════════════════════════════════════╗
  ║                                 [1mFoo Bar Hike[0m                                 ║
  ╚══════════════════════════════════════════════════════════════════════════════╝
  
  My awesome journey...                                                           
  
  (elevation (m)) ^
         557 |
         557 | ⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         556 | ⡇⠀⠀⢠⠤⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         555 | ⡇⠀⠀⡎⠀⠘⡄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         554 | ⡇⠀⢰⠁⠀⠀⠘⡄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         553 | ⡇⠀⡸⠀⠀⠀⠀⢣⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         552 | ⡇⠀⡇⠀⠀⠀⠀⠸⡀⠀⡜⡄⡜⠉⠉⢆⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         552 | ⡇⢠⠃⠀⠀⠀⠀⠀⠓⠚⠀⠘⠀⠀⠀⠈⠒⢆⠀⠀⠀⡰⢲⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         551 | ⡇⢸⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠓⠒⠚⠀⠀⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⠖⠒⠒⠒⠒⠀⠀⠀⠀
         550 | ⡇⢸⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠸⠤⠤⠤⡄⠀⠀⠀⠀⠀⠀⠀⠀⠀⡎⠀⠀⠀⠀⠀⠀⠀⠀⠀
         549 | ⡇⡎⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠸⡀⠀⠀⢀⣀⠀⠀⠀⢰⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀
         548 | ⡇⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢇⠀⠀⢸⠈⢆⠀⠀⡜⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         547 | ⡇⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠉⠉⠉⠀⠈⠉⠉⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         546 | ⣇⠇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         546 | ⣿⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         545 | ⣿⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         544 | ⣿⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         543 | ⡏⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         542 | ⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         541 | ⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         541 | ⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
  -----------|-|---------|---------|---------|---------|--------> (Distance (km))
             | 0.00      0.09      0.18      0.27      0.36     
  
  GPXSee not found. Install it to view your gpx
  
  '''
# ---
# name: test_command_show_detail[True-False-True]
  '''
  [3m              Foo Bar Hike              [0m
   ────────────────────────────────────── 
    ID            1                       
    Date          1984-09-23              
    ➡ km          20.7                    
    ⬈ m           2040                    
    ⬊ m           2028                    
    ⏱             07:14                   
    km/h          2.86                    
   ────────────────────────────────────── 
  
  ╔══════════════════════════════════════════════════════════════════════════════╗
  ║                                 [1mFoo Bar Hike[0m                                 ║
  ╚══════════════════════════════════════════════════════════════════════════════╝
  
  My awesome journey...                                                           
  
  (elevation (m)) ^
         557 |
         557 | ⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         556 | ⡇⠀⠀⢠⠤⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         555 | ⡇⠀⠀⡎⠀⠘⡄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         554 | ⡇⠀⢰⠁⠀⠀⠘⡄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         553 | ⡇⠀⡸⠀⠀⠀⠀⢣⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         552 | ⡇⠀⡇⠀⠀⠀⠀⠸⡀⠀⡜⡄⡜⠉⠉⢆⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         552 | ⡇⢠⠃⠀⠀⠀⠀⠀⠓⠚⠀⠘⠀⠀⠀⠈⠒⢆⠀⠀⠀⡰⢲⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         551 | ⡇⢸⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠓⠒⠚⠀⠀⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⠖⠒⠒⠒⠒⠀⠀⠀⠀
         550 | ⡇⢸⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠸⠤⠤⠤⡄⠀⠀⠀⠀⠀⠀⠀⠀⠀⡎⠀⠀⠀⠀⠀⠀⠀⠀⠀
         549 | ⡇⡎⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠸⡀⠀⠀⢀⣀⠀⠀⠀⢰⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀
         548 | ⡇⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢇⠀⠀⢸⠈⢆⠀⠀⡜⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         547 | ⡇⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠉⠉⠉⠀⠈⠉⠉⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         546 | ⣇⠇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         546 | ⣿⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         545 | ⣿⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         544 | ⣿⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         543 | ⡏⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         542 | ⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         541 | ⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         541 | ⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
  -----------|-|---------|---------|---------|---------|--------> (Distance (km))
             | 0.00      0.09      0.18      0.27      0.36     
  
  Aborting
  
  '''
# ---
# name: test_command_show_detail[True-True-False]
  '''
  [3m              Foo Bar Hike              [0m
   ────────────────────────────────────── 
    ID            1                       
    Date          1984-09-23              
    ➡ km          20.7                    
    ⬈ m           2040                    
    ⬊ m           2028                    
    ⏱             07:14                   
    km/h          2.86                    
   ────────────────────────────────────── 
  
  ╔══════════════════════════════════════════════════════════════════════════════╗
  ║                                 [1mFoo Bar Hike[0m                                 ║
  ╚══════════════════════════════════════════════════════════════════════════════╝
  
  My awesome journey...                                                           
  
  (elevation (m)) ^
         557 |
         557 | ⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         556 | ⡇⠀⠀⢠⠤⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         555 | ⡇⠀⠀⡎⠀⠘⡄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         554 | ⡇⠀⢰⠁⠀⠀⠘⡄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         553 | ⡇⠀⡸⠀⠀⠀⠀⢣⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         552 | ⡇⠀⡇⠀⠀⠀⠀⠸⡀⠀⡜⡄⡜⠉⠉⢆⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         552 | ⡇⢠⠃⠀⠀⠀⠀⠀⠓⠚⠀⠘⠀⠀⠀⠈⠒⢆⠀⠀⠀⡰⢲⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         551 | ⡇⢸⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠓⠒⠚⠀⠀⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⠖⠒⠒⠒⠒⠀⠀⠀⠀
         550 | ⡇⢸⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠸⠤⠤⠤⡄⠀⠀⠀⠀⠀⠀⠀⠀⠀⡎⠀⠀⠀⠀⠀⠀⠀⠀⠀
         549 | ⡇⡎⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠸⡀⠀⠀⢀⣀⠀⠀⠀⢰⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀
         548 | ⡇⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢇⠀⠀⢸⠈⢆⠀⠀⡜⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         547 | ⡇⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠉⠉⠉⠀⠈⠉⠉⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         546 | ⣇⠇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         546 | ⣿⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         545 | ⣿⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         544 | ⣿⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         543 | ⡏⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         542 | ⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         541 | ⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         541 | ⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
  -----------|-|---------|---------|---------|---------|--------> (Distance (km))
             | 0.00      0.09      0.18      0.27      0.36     
  
  GPXSee not found. Install it to view your gpx
  
  '''
# ---
# name: test_command_show_detail[True-True-True]
  '''
  [3m              Foo Bar Hike              [0m
   ────────────────────────────────────── 
    ID            1                       
    Date          1984-09-23              
    ➡ km          20.7                    
    ⬈ m           2040                    
    ⬊ m           2028                    
    ⏱             07:14                   
    km/h          2.86                    
   ────────────────────────────────────── 
  
  ╔══════════════════════════════════════════════════════════════════════════════╗
  ║                                 [1mFoo Bar Hike[0m                                 ║
  ╚══════════════════════════════════════════════════════════════════════════════╝
  
  My awesome journey...                                                           
  
  (elevation (m)) ^
         557 |
         557 | ⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         556 | ⡇⠀⠀⢠⠤⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         555 | ⡇⠀⠀⡎⠀⠘⡄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         554 | ⡇⠀⢰⠁⠀⠀⠘⡄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         553 | ⡇⠀⡸⠀⠀⠀⠀⢣⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         552 | ⡇⠀⡇⠀⠀⠀⠀⠸⡀⠀⡜⡄⡜⠉⠉⢆⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         552 | ⡇⢠⠃⠀⠀⠀⠀⠀⠓⠚⠀⠘⠀⠀⠀⠈⠒⢆⠀⠀⠀⡰⢲⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         551 | ⡇⢸⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠓⠒⠚⠀⠀⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⠖⠒⠒⠒⠒⠀⠀⠀⠀
         550 | ⡇⢸⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠸⠤⠤⠤⡄⠀⠀⠀⠀⠀⠀⠀⠀⠀⡎⠀⠀⠀⠀⠀⠀⠀⠀⠀
         549 | ⡇⡎⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠸⡀⠀⠀⢀⣀⠀⠀⠀⢰⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀
         548 | ⡇⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢇⠀⠀⢸⠈⢆⠀⠀⡜⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         547 | ⡇⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠉⠉⠉⠀⠈⠉⠉⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         546 | ⣇⠇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         546 | ⣿⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         545 | ⣿⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         544 | ⣿⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         543 | ⡏⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         542 | ⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         541 | ⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
         541 | ⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
  -----------|-|---------|---------|---------|---------|--------> (Distance (km))
             | 0.00      0.09      0.18      0.27      0.36     
  
  
  '''
# ---
# name: test_command_show_list[date-False-daterange0-table_style0-plot_params0]
  '''
  [3m                                   Hikes                                    [0m
   ────────────────────────────────────────────────────────────────────────── 
   [1m [0m[1mID[0m[1m [0m [1m [0m[1mDate      [0m[1m [0m [1m [0m[1mName    [0m[1m [0m [1m [0m[1m  ➡ km[0m[1m [0m [1m [0m[1m   ⬈ m[0m[1m [0m [1m [0m[1m   ⬊ m[0m[1m [0m [1m [0m[1m      ⏱[0m[1m [0m [1m [0m[1m  km/h[0m[1m [0m 
   ────────────────────────────────────────────────────────────────────────── 
     1   1984-09-22   Foo Hike     10.5     2040     2028     02:14     4.70  
     2   1984-09-23   Bar Hike     15.4      240      228     03:48     4.05  
     3   1984-09-24   Baz Hike     34.0      867      947     08:17     4.10  
   ────────────────────────────────────────────────────────────────────────── 
   [1m [0m[1m  [0m[1m [0m [1m [0m[1mSTATS     [0m[1m [0m [1m [0m[1m3       [0m[1m [0m [1m [0m[1mΣ [0m[1m59.9[0m[1m [0m [1m [0m[1mΣ [0m[1m3147[0m[1m [0m [1m [0m[1mΣ [0m[1m3203[0m[1m [0m [1m [0m[1mΣ [0m[1m14:19[0m[1m [0m [1m [0m[1mΣ [0m[1m   -[0m[1m [0m 
   [1m    [0m [1m            [0m [1m          [0m [1m [0m[1m⌀ [0m[1m20.0[0m[1m [0m [1m [0m[1m⌀ [0m[1m1049[0m[1m [0m [1m [0m[1m⌀ [0m[1m1068[0m[1m [0m [1m [0m[1m⌀ [0m[1m04:46[0m[1m [0m [1m [0m[1m⌀ [0m[1m4.29[0m[1m [0m 
   [1m    [0m [1m            [0m [1m          [0m [1m [0m[1m↑ [0m[1m34.0[0m[1m [0m [1m [0m[1m↑ [0m[1m2040[0m[1m [0m [1m [0m[1m↑ [0m[1m2028[0m[1m [0m [1m [0m[1m↑ [0m[1m08:17[0m[1m [0m [1m [0m[1m↑ [0m[1m4.70[0m[1m [0m 
   [1m    [0m [1m            [0m [1m          [0m [1m [0m[1m↓ [0m[1m10.5[0m[1m [0m [1m [0m[1m↓ [0m[1m 240[0m[1m [0m [1m [0m[1m↓ [0m[1m 228[0m[1m [0m [1m [0m[1m↓ [0m[1m02:14[0m[1m [0m [1m [0m[1m↓ [0m[1m4.05[0m[1m [0m 
   ────────────────────────────────────────────────────────────────────────── 
  
  '''
# ---
# name: test_command_show_list[date-True-daterange1-table_style1-plot_params1]
  '''
  [3m                                   Hikes                                    [0m
   ────────────────────────────────────────────────────────────────────────── 
   [1m [0m[1mID[0m[1m [0m [1m [0m[1mDate      [0m[1m [0m [1m [0m[1mName    [0m[1m [0m [1m [0m[1m  ➡ km[0m[1m [0m [1m [0m[1m   ⬈ m[0m[1m [0m [1m [0m[1m   ⬊ m[0m[1m [0m [1m [0m[1m      ⏱[0m[1m [0m [1m [0m[1m  km/h[0m[1m [0m 
   ────────────────────────────────────────────────────────────────────────── 
     2   1984-09-23   Bar Hike     15.4      240      228     03:48     4.05  
     1   1984-09-22   Foo Hike     10.5     2040     2028     02:14     4.70  
   ────────────────────────────────────────────────────────────────────────── 
   [1m [0m[1m  [0m[1m [0m [1m [0m[1mSTATS     [0m[1m [0m [1m [0m[1m2       [0m[1m [0m [1m [0m[1mΣ [0m[1m59.9[0m[1m [0m [1m [0m[1mΣ [0m[1m3147[0m[1m [0m [1m [0m[1mΣ [0m[1m3203[0m[1m [0m [1m [0m[1mΣ [0m[1m06:02[0m[1m [0m [1m [0m[1mΣ [0m[1m   -[0m[1m [0m 
   [1m    [0m [1m            [0m [1m          [0m [1m [0m[1m⌀ [0m[1m12.9[0m[1m [0m [1m [0m[1m⌀ [0m[1m1140[0m[1m [0m [1m [0m[1m⌀ [0m[1m1128[0m[1m [0m [1m [0m[1m⌀ [0m[1m03:01[0m[1m [0m [1m [0m[1m⌀ [0m[1m4.38[0m[1m [0m 
   [1m    [0m [1m            [0m [1m          [0m [1m [0m[1m↑ [0m[1m15.4[0m[1m [0m [1m [0m[1m↑ [0m[1m2040[0m[1m [0m [1m [0m[1m↑ [0m[1m2028[0m[1m [0m [1m [0m[1m↑ [0m[1m03:48[0m[1m [0m [1m [0m[1m↑ [0m[1m4.70[0m[1m [0m 
   [1m    [0m [1m            [0m [1m          [0m [1m [0m[1m↓ [0m[1m10.5[0m[1m [0m [1m [0m[1m↓ [0m[1m 240[0m[1m [0m [1m [0m[1m↓ [0m[1m 228[0m[1m [0m [1m [0m[1m↓ [0m[1m02:14[0m[1m [0m [1m [0m[1m↓ [0m[1m4.05[0m[1m [0m 
   ────────────────────────────────────────────────────────────────────────── 
  
  '''
# ---
# name: test_command_show_list[distance-True-daterange2-table_style2-plot_params2]
  '''
  [3m                                   Hikes                                    [0m
  ╔════╦════════════╦══════════╦════════╦════════╦════════╦═════════╦════════╗
  ║[1m [0m[1mID[0m[1m [0m║[1m [0m[1mDate      [0m[1m [0m║[1m [0m[1mName    [0m[1m [0m║[1m [0m[1m  ➡ km[0m[1m [0m║[1m [0m[1m   ⬈ m[0m[1m [0m║[1m [0m[1m   ⬊ m[0m[1m [0m║[1m [0m[1m      ⏱[0m[1m [0m║[1m [0m[1m  km/h[0m[1m [0m║
  ╠════╬════════════╬══════════╬════════╬════════╬════════╬═════════╬════════╣
  ║  3 ║ 1984-09-24 ║ Baz Hike ║   34.0 ║    867 ║    947 ║   08:17 ║   4.10 ║
  ║  2 ║ 1984-09-23 ║ Bar Hike ║   15.4 ║    240 ║    228 ║   03:48 ║   4.05 ║
  ║  1 ║ 1984-09-22 ║ Foo Hike ║   10.5 ║   2040 ║   2028 ║   02:14 ║   4.70 ║
  ╠════╬════════════╬══════════╬════════╬════════╬════════╬═════════╬════════╣
  ║[1m [0m[1m  [0m[1m [0m║[1m [0m[1mSTATS     [0m[1m [0m║[1m [0m[1m3       [0m[1m [0m║[1m [0m[1mΣ [0m[1m59.9[0m[1m [0m║[1m [0m[1mΣ [0m[1m3147[0m[1m [0m║[1m [0m[1mΣ [0m[1m3203[0m[1m [0m║[1m [0m[1mΣ [0m[1m14:19[0m[1m [0m║[1m [0m[1mΣ [0m[1m   -[0m[1m [0m║
  ║[1m    [0m║[1m            [0m║[1m          [0m║[1m [0m[1m⌀ [0m[1m20.0[0m[1m [0m║[1m [0m[1m⌀ [0m[1m1049[0m[1m [0m║[1m [0m[1m⌀ [0m[1m1068[0m[1m [0m║[1m [0m[1m⌀ [0m[1m04:46[0m[1m [0m║[1m [0m[1m⌀ [0m[1m4.29[0m[1m [0m║
  ║[1m    [0m║[1m            [0m║[1m          [0m║[1m [0m[1m↑ [0m[1m34.0[0m[1m [0m║[1m [0m[1m↑ [0m[1m2040[0m[1m [0m║[1m [0m[1m↑ [0m[1m2028[0m[1m [0m║[1m [0m[1m↑ [0m[1m08:17[0m[1m [0m║[1m [0m[1m↑ [0m[1m4.70[0m[1m [0m║
  ║[1m    [0m║[1m            [0m║[1m          [0m║[1m [0m[1m↓ [0m[1m10.5[0m[1m [0m║[1m [0m[1m↓ [0m[1m 240[0m[1m [0m║[1m [0m[1m↓ [0m[1m 228[0m[1m [0m║[1m [0m[1m↓ [0m[1m02:14[0m[1m [0m║[1m [0m[1m↓ [0m[1m4.05[0m[1m [0m║
  ╚════╩════════════╩══════════╩════════╩════════╩════════╩═════════╩════════╝
  
  '''
# ---
# name: test_command_show_list[elevation_gain-False-daterange3-table_style3-plot_params3]
  '''
  [3m                                   Hikes                                    [0m
  ╔════╦════════════╦══════════╦════════╦════════╦════════╦═════════╦════════╗
  ║[1m [0m[1mID[0m[1m [0m║[1m [0m[1mDate      [0m[1m [0m║[1m [0m[1mName    [0m[1m [0m║[1m [0m[1m  ➡ km[0m[1m [0m║[1m [0m[1m   ⬈ m[0m[1m [0m║[1m [0m[1m   ⬊ m[0m[1m [0m║[1m [0m[1m      ⏱[0m[1m [0m║[1m [0m[1m  km/h[0m[1m [0m║
  ╠════╬════════════╬══════════╬════════╬════════╬════════╬═════════╬════════╣
  ║  2 ║ 1984-09-23 ║ Bar Hike ║   15.4 ║    240 ║    228 ║   03:48 ║   4.05 ║
  ║  3 ║ 1984-09-24 ║ Baz Hike ║   34.0 ║    867 ║    947 ║   08:17 ║   4.10 ║
  ║  1 ║ 1984-09-22 ║ Foo Hike ║   10.5 ║   2040 ║   2028 ║   02:14 ║   4.70 ║
  ╠════╬════════════╬══════════╬════════╬════════╬════════╬═════════╬════════╣
  ║[1m [0m[1m  [0m[1m [0m║[1m [0m[1mSTATS     [0m[1m [0m║[1m [0m[1m3       [0m[1m [0m║[1m [0m[1mΣ [0m[1m59.9[0m[1m [0m║[1m [0m[1mΣ [0m[1m3147[0m[1m [0m║[1m [0m[1mΣ [0m[1m3203[0m[1m [0m║[1m [0m[1mΣ [0m[1m14:19[0m[1m [0m║[1m [0m[1mΣ [0m[1m   -[0m[1m [0m║
  ║[1m    [0m║[1m            [0m║[1m          [0m║[1m [0m[1m⌀ [0m[1m20.0[0m[1m [0m║[1m [0m[1m⌀ [0m[1m1049[0m[1m [0m║[1m [0m[1m⌀ [0m[1m1068[0m[1m [0m║[1m [0m[1m⌀ [0m[1m04:46[0m[1m [0m║[1m [0m[1m⌀ [0m[1m4.29[0m[1m [0m║
  ║[1m    [0m║[1m            [0m║[1m          [0m║[1m [0m[1m↑ [0m[1m34.0[0m[1m [0m║[1m [0m[1m↑ [0m[1m2040[0m[1m [0m║[1m [0m[1m↑ [0m[1m2028[0m[1m [0m║[1m [0m[1m↑ [0m[1m08:17[0m[1m [0m║[1m [0m[1m↑ [0m[1m4.70[0m[1m [0m║
  ║[1m    [0m║[1m            [0m║[1m          [0m║[1m [0m[1m↓ [0m[1m10.5[0m[1m [0m║[1m [0m[1m↓ [0m[1m 240[0m[1m [0m║[1m [0m[1m↓ [0m[1m 228[0m[1m [0m║[1m [0m[1m↓ [0m[1m02:14[0m[1m [0m║[1m [0m[1m↓ [0m[1m4.05[0m[1m [0m║
  ╚════╩════════════╩══════════╩════════╩════════╩════════╩═════════╩════════╝
  
  '''
# ---
# name: test_command_show_list[speed-True-daterange4-table_style4-plot_params4]
  '''
  [3m                                   Hikes                                    [0m
   ────────────────────────────────────────────────────────────────────────── 
   [1m [0m[1mID[0m[1m [0m [1m [0m[1mDate      [0m[1m [0m [1m [0m[1mName    [0m[1m [0m [1m [0m[1m  ➡ km[0m[1m [0m [1m [0m[1m   ⬈ m[0m[1m [0m [1m [0m[1m   ⬊ m[0m[1m [0m [1m [0m[1m      ⏱[0m[1m [0m [1m [0m[1m  km/h[0m[1m [0m 
   ────────────────────────────────────────────────────────────────────────── 
     1   1984-09-22   Foo Hike     10.5     2040     2028     02:14     4.70  
     3   1984-09-24   Baz Hike     34.0      867      947     08:17     4.10  
     2   1984-09-23   Bar Hike     15.4      240      228     03:48     4.05  
   ────────────────────────────────────────────────────────────────────────── 
   [1m [0m[1m  [0m[1m [0m [1m [0m[1mSTATS     [0m[1m [0m [1m [0m[1m3       [0m[1m [0m [1m [0m[1mΣ [0m[1m59.9[0m[1m [0m [1m [0m[1mΣ [0m[1m3147[0m[1m [0m [1m [0m[1mΣ [0m[1m3203[0m[1m [0m [1m [0m[1mΣ [0m[1m14:19[0m[1m [0m [1m [0m[1mΣ [0m[1m   -[0m[1m [0m 
   [1m    [0m [1m            [0m [1m          [0m [1m [0m[1m⌀ [0m[1m20.0[0m[1m [0m [1m [0m[1m⌀ [0m[1m1049[0m[1m [0m [1m [0m[1m⌀ [0m[1m1068[0m[1m [0m [1m [0m[1m⌀ [0m[1m04:46[0m[1m [0m [1m [0m[1m⌀ [0m[1m4.29[0m[1m [0m 
   [1m    [0m [1m            [0m [1m          [0m [1m [0m[1m↑ [0m[1m34.0[0m[1m [0m [1m [0m[1m↑ [0m[1m2040[0m[1m [0m [1m [0m[1m↑ [0m[1m2028[0m[1m [0m [1m [0m[1m↑ [0m[1m08:17[0m[1m [0m [1m [0m[1m↑ [0m[1m4.70[0m[1m [0m 
   [1m    [0m [1m            [0m [1m          [0m [1m [0m[1m↓ [0m[1m10.5[0m[1m [0m [1m [0m[1m↓ [0m[1m 240[0m[1m [0m [1m [0m[1m↓ [0m[1m 228[0m[1m [0m [1m [0m[1m↓ [0m[1m02:14[0m[1m [0m [1m [0m[1m↓ [0m[1m4.05[0m[1m [0m 
   ────────────────────────────────────────────────────────────────────────── 
    [1m([0m➡ km[1m)[0m   ^
       [1;36m36.35[0m |
       [1;36m34.94[0m | ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
       [1;36m33.53[0m | ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀
       [1;36m32.12[0m | ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⠔⠁
       [1;36m30.71[0m | ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⡠⠊⠀⠀
       [1;36m29.30[0m | ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⡠⠊⠀⠀⠀⠀
       [1;36m27.89[0m | ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⠎⠀⠀⠀⠀⠀⠀
       [1;36m26.48[0m | ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⠔⠁⠀⠀⠀⠀⠀⠀⠀
       [1;36m25.07[0m | ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⠔⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀
       [1;36m23.66[0m | ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⡠⠊⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
       [1;36m22.25[0m | ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⡠⠊⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
       [1;36m20.84[0m | ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢠⠊⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
       [1;36m19.43[0m | ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⠔⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
       [1;36m18.02[0m | ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⠔⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
       [1;36m16.61[0m | ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⡠⠃⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
       [1;36m15.20[0m | ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣀⣀⠤⠊⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
       [1;36m13.79[0m | ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣀⠤⠤⠒⠊⠉⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
       [1;36m12.38[0m | ⠀⠀⠀⠀⠀⠀⠀⠀⣀⡠⠤⠒⠒⠉⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
       [1;36m10.97[0m | ⠀⣀⣀⠤⠔⠒⠉⠉⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
        [1;36m9.56[0m | ⠉⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
        [1;36m8.15[0m | ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
  -----------|-|---------|---------|---------|---------|--------> [1m([0mDate[1m)[0m
             | [1;36m09[0m-[1;36m22[0m     [1;36m09[0m-[1;36m22[0m     [1;36m09[0m-[1;36m22[0m     [1;36m09[0m-[1;36m23[0m     [1;36m09[0m-[1;36m23[0m    
  
  '''
# ---
